...
                      height: 200.0,
                      fit: BoxFit.cover,
                    ),
                  ),
                ),
                FFButtonWidget(
                  key: ValueKey('Button_wisr'),
                  onPressed: () async {
                    context.pushNamed(ListaBoletinsWidget.routeName);
                  },
                  text: 'Boletins',
                  icon: Icon(
                    Icons.library_books,
...
