...
                                    safeSetState(() {});

                                    context
                                        .pushNamed(NovoBoletimWidget.routeName);
                                  },
                                  child: Container(
                                    key: ValueKey('Container_rpog'),
                                    width: 100.0,
                                    height: 100.0,
                                    decoration: BoxDecoration(
                                      color:
                                          FlutterFlowTheme.of(context).primary,
                                      borderRadius: BorderRadius.circular(10.0),
...
